src/test/06-Errors/error-empty-spaces.txt
error-empty-spaces.ck:3:8: syntax error
[3]         
           ^
